--- a/ansible_collections/arista/avd/roles/eos_designs/meta/argument_specs.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/meta/argument_specs.yml
@@ -1,5 +1,5 @@
 ---
 # arista.avd.eos_cli_config_gen argument_specs
 argument_specs:
-  main:
-    options: "{{ schemas }}"
+#   main:
+#     options: "{{ schemas }}"
