Fix(eos_designs): Update roledocs

--- a/ansible_collections/arista/avd/roles/eos_designs/tasks/role_docs.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/tasks/role_docs.yml
@@ -2,19 +2,11 @@
 - name: Generate Role Documentation
   tags: [role_docs]
   template:
-    src: "role_docs/role_docs.md.j2"
-    dest: "{{ role_path }}/doc/{{ item }}"
+    src: "role_docs/main.j2"
+    dest: "{{ role_path }}/doc/{{ item.name }}"
     mode: 0664
   delegate_to: localhost
   vars:
-    doc_file: "{{ item }}"
-  with_items:
-    # - connected-endpoints.md
-    # - custom-structured-configuration.md
-    # - fabric-topology.md
-    # - fabric-variables.md
-    # - l3-edge.md
-    - management-settings.md
-    # - network-services.md
-    # - node-types.md
-    # - platform-settings.md
+    doc_file: "{{ item.name }}"
+    doc_keys: "{{ item.doc_keys }}"
+  with_items: "{{ lookup('file', 'templates/role_docs/doc_files.yml') | from_yaml }}"
