--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/ethernet_interfaces.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/ethernet_interfaces.schema.yml
@@ -426,6 +426,20 @@ keys:
                   max: 429467295
                 sparse_mode:
                   type: bool
+                hello_interval:
+                  type: int
+                  description: Time between PIM hello packets in seconds
+                  convert_types:
+                  - str
+                  min: 0
+                  max: 65535
+                join_prune_interval:
+                  type: int
+                  description: PIM join/prune interval in seconds
+                  convert_types:
+                  - str
+                  min: 0
+                  max: 18724
         mac_security:
           type: dict
           keys:
