--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/vlan_interfaces.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/vlan_interfaces.schema.yml
@@ -296,6 +296,20 @@ keys:
                   max: 429467295
                 sparse_mode:
                   type: bool
+                hello_interval:
+                  type: int
+                  description: Time between PIM hello packets in seconds
+                  convert_types:
+                  - str
+                  min: 0
+                  max: 65535
+                join_prune_interval:
+                  type: int
+                  description: PIM join/prune interval in seconds
+                  convert_types:
+                  - str
+                  min: 0
+                  max: 18724
                 local_interface:
                   type: str
         isis_enable:
